# clever-kubernetes-operator

./: Cargo.toml  Dockerfile  Makefile  README.md  config.sample.toml
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: controller.rs  lib.rs  registry.rs
crates/operator/: Cargo.toml
crates/operator/src/cmd/: configmap.rs  mod.rs  secret.rs
crates/operator/src/svc/clevercloud/: client.rs  ext.rs
crates/operator/src/svc/crd/: config_provider.rs  elasticsearch.rs  keycloak.rs  otoroshi.rs  pulsar.rs  redis.rs
crates/operator/src/svc/k8s/recorder/: event.rs
deployments/kubernetes/helm/: Chart.yaml  values.yaml
deployments/kubernetes/helm/templates/: NOTES.txt  clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  custom-resource-definition.yaml  deployment.yaml  netpol.yaml  poddisruptionbudget.yaml  secret.yaml  serviceaccount.yaml
deployments/kubernetes/v1.30.0/: 20-deployment.yaml
deployments/operator-lifecycle-manager/bundle-0.1.0/: bundle.Dockerfile
deployments/operator-lifecycle-manager/bundle-0.1.0/manifests/: clever-kubernetes-operator.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/bundle-0.2.0/manifests/: clever-kubernetes-operator.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/bundle-0.3.0/manifests/: clever-kubernetes-operator.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/bundle-0.3.1/: bundle.Dockerfile
deployments/operator-lifecycle-manager/bundle-0.3.1/manifests/: clever-kubernetes-operator.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/bundle-0.3.1/metadata/: annotations.yaml
deployments/operator-lifecycle-manager/bundle-0.3.2/manifests/: clever-kubernetes-operator.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/bundle-0.3.3/manifests/: clever-kubernetes-operator.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/bundle-0.3.4/manifests/: clever-kubernetes-operator.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/bundle-0.3.5/manifests/: clever-kubernetes-operator.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/bundle-0.4.0/manifests/: clever-kubernetes-operator.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/bundle-0.5.0/manifests/: clever-kubernetes-operator.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/bundle-0.5.1/: bundle.Dockerfile
deployments/operator-lifecycle-manager/bundle-0.5.1/manifests/: clever-kubernetes-operator.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/bundle-0.5.1/metadata/: annotations.yaml
deployments/operator-lifecycle-manager/bundle-0.5.2/manifests/: clever-kubernetes-operator.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/bundle-0.5.3/manifests/: clever-kubernetes-operator.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/bundle-0.5.4/manifests/: clever-kubernetes-operator.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/bundle-0.5.5/: bundle.Dockerfile
deployments/operator-lifecycle-manager/bundle-0.5.5/manifests/: clever-kubernetes-operator.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/bundle-0.6.0/manifests/: clever-kubernetes-operator.clusterserviceversion.yaml
deployments/operator-lifecycle-manager/bundle-0.8.0/metadata/: annotations.yaml
docs/: 10-concepts.md  21-set-up-operator-sdk-development-environment.md  40-custom-resources.md  50-release.md
src/cmd/: mod.rs
src/svc/: cfg.rs
src/svc/clevercloud/: client.rs  ext.rs
src/svc/crd/: azimutt.rs  cellar.rs  keycloak.rs  kv.rs  matomo.rs  metabase.rs  mongodb.rs  mysql.rs  otoroshi.rs  postgresql.rs
src/svc/k8s/: mod.rs  secret.rs
(+14 files in other folders)
