# Cargo workspace for the Clever Cloud Kubernetes operator.
# See https://doc.rust-lang.org/cargo/reference/workspaces.html
[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/operator",
]

# Metadata shared by every workspace member. Path-based fields (license-file,
# readme) are resolved relative to this workspace root.
[workspace.package]
version = "0.8.0"
edition = "2024"
rust-version = "1.91.0"
authors = ["Florentin Dubois <florentin.dubois@clever-cloud.com>"]
license-file = "LICENSE"
repository = "https://github.com/CleverCloud/clever-kubernetes-operator"
readme = "README.md"

# Release profile must live at the workspace root (member profiles are ignored).
[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
