[package]
name = "clever-kubernetes-operator-core"
description = "Shared core library for the Clever Cloud Kubernetes operator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
