# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "clever-kubernetes-operator"
description = "A kubernetes operator that expose clever cloud's resources through custom resource definition"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["kubernetes", "operator", "clevercloud", "openshift"]

[dependencies]
axum = { version = "^0.8.1", default-features = false, features = [
    "http1",
    "tokio",
    "tracing",
    "macros",
    "original-uri",
    "matched-path",
    "json",
] }
base64 = "^0.22.1"
chrono = { version = "^0.4.40", default-features = false }
clap = { version = "^4.5.34", features = ["derive"] }
clevercloud-sdk = { version = "1.0.1", features = [
    "jsonschemas",
] }
config = "^0.15.9"
futures = "^0.3.31"
hostname = "^0.4.0"
json-patch = "^4.0.0"
kube = { version = "^3.1.0", default-features = false, features = [
    "client",
    "rustls-tls",
    "ws",
    "gzip",
    "derive",
    "jsonpatch",
    "runtime",
] }
k8s-openapi = { version = "^0.27.0", default-features = false, features = [
    "v1_35",
] }
mime = { version = "^0.3.17" }
paw = { version = "^1.0.0" }
prometheus = { version = "^0.14.0", optional = true }
schemars = { version = "^1.2", features = [
    "derive",
    "chrono04",
    "indexmap2",
    "uuid1",
    "bytes1",
    "url2",
] }
serde = { version = "^1.0.219", features = ["derive"] }
serde_json = { version = "^1.0.140", features = [
    "preserve_order",
    "float_roundtrip",
] }
serde_yaml = "^0.9.33"
tempfile = "^3.18.0"
toml = "^0.8.20"
thiserror = "^2.0.12"
tokio = { version = "^1.44.0", features = ["full"] }
tracing = { version = "^0.1.41" }
tracing-subscriber = { version = "^0.3.19", default-features = false, features = [
    "std",
    "ansi",
] }

[features]
default = ["logging", "metrics", "tracing"]
logging = ["clevercloud-sdk/logging"]
metrics = ["clevercloud-sdk/metrics", "prometheus"]
tracing = ["clevercloud-sdk/tracing"]
